# ArmadilloLearnDesktop

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mouse_hook.rs  ocr.rs  window_manager.rs
