[package]
name = "armadillo-learn-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "armadillo_learn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62.2", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
mouse_position = "0.1.4"
screenshots = "0.8"
image = "0.25.10"
mouce = "0.3.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
